--- a/loan_debtors/vikulova_issledovanie_nadezhnosti_zaemshchikov-GITHUB.ipynb
+++ b/loan_debtors/vikulova_issledovanie_nadezhnosti_zaemshchikov-GITHUB.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Исследование надёжности заёмщиков\n",
+    "## Исследование надежности заемщиков\n",
     "\n",
     "Заказчик — кредитный отдел банка. Нужно разобраться, влияет ли семейное положение и количество детей клиента на факт погашения кредита в срок. Входные данные от банка — статистика о платёжеспособности клиентов.\n",
     "\n",
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "Для начала работы импортируем таблицу и посмотрим на первые 20 строк, чтобы ознакомиться с данными. Сохраним таблицу под именем *data*. \n",
-    "Также импортируем библиотеку *PyMystem* и контейнер *Counter* из модуля *Collections*, они пригодятся нам в будущем:"
+    "Также импортируем библиотеку *PyMystem* и контейнер *Counter* из модуля *Collections*:"
    ]
   },
   {
